--- a/src/DeepLinkModule/resources/deeplink/404.html
+++ b/src/DeepLinkModule/resources/deeplink/404.html
@@ -1,22 +1,33 @@
+<!doctype html>
 <html>
-	<head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Mendix 5 - Login</title>
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="robots" content="noindex, nofollow">
-        <link rel="stylesheet" href="{RELPATH}lib/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="{RELPATH}css/login.css">
-	</head>
-	<body>
-        <div class="login-container" style="max-width:600px">
-                <div class="login-logo"></div>
-                <div class="contentPane">
-							<h1>Not found: {URL}</h1><br/>
-							The requested object does not exist or you {USER} do not have the permissions to view the object. <br/><br/>
-							You can try to navigate directly to the <a href ="{RELPATH}index.html">application</a>.
-                 </div>
-        </div>				
-	</body>
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Mendix - Login</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="robots" content="noindex, nofollow">
+	<link rel="stylesheet" href="{RELPATH}lib/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="{RELPATH}mxclientsystem/mxui/ui/mxui.css">
+	<!--<link rel="stylesheet" href="{RELPATH}css/theme.css">-->
+	<link rel="stylesheet" href="{RELPATH}styles/css/lib/lib.css">
+	<link rel="stylesheet" href="{RELPATH}styles/css/custom/custom.css">
+</head>
+
+<body class="profile-desktop login">
+	<div class="login-container" id="mxui_widget_Login_0" widgetid="mxui_widget_Login_0">
+		<form class="login-form" action="{RELPATH}{URL}" method="post">
+			<div class="login-form-inputs well">
+				<div class="login-logo"></div>
+				<div id="loginMessage" class="alert alert-danger login-message">Requested deeplink could not found</div>
+				</br>
+				<p>The requested object does not exist or you {USER} do not have the permissions to view the object.</p>
+				<p>You can try to navigate directly to the <a href="{RELPATH}index.html">application</a>.</p>
+				<hr>
+				<p> Requested url: {URL}</p>
+		</form>
+		</div>
+</body>
+
 </html>
