--- a/src/DeepLinkModule/resources/deeplink/404.html
+++ b/src/DeepLinkModule/resources/deeplink/404.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="{RELPATH}styles/css/custom/custom.css">
 </head>
 
-<body class="profile-desktop login">
+<body class="login deeplink">
 	<div class="login-container" id="mxui_widget_Login_0" widgetid="mxui_widget_Login_0">
 		<form class="login-form" action="{RELPATH}{URL}" method="post">
 			<div class="login-form-inputs well">
