--- a/src/DeepLinkModule/resources/deeplink/login.html
+++ b/src/DeepLinkModule/resources/deeplink/login.html
@@ -15,12 +15,12 @@
 	<link rel="stylesheet" href="{RELPATH}styles/css/custom/custom.css">
 </head>
 
-<body class="profile-desktop login">
+<body class="login deeplink">
 	<div class="login-container" id="mxui_widget_Login_0" widgetid="mxui_widget_Login_0">
 		<form class="login-form" action="{RELPATH}{URL}" method="post">
 			<div class="login-form-inputs well">
 				<div class="login-logo"></div>
-				<div id="loginMessage" class="alert alert-danger login-message">{RESULT}</div>
+				<div id="loginMessage" class="alert alert-danger">{RESULT}</div>
 				<div class="form-group">
 					<input class="form-control" name="username" type="text" autocorrect="off" autocapitalize="none" placeholder="User name">
 				</div>
